Specific deposit and withdrawal fees on vault card

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -15,7 +15,7 @@
   "Vault-DepositButton": "Einzahlen",
   "Vault-DepositButtonAll": "Alles einzahlen",
   "Vault-DepositTokensNote": "Sie erhalten {{mooToken}}-Token als Quittung für Ihr eingezahltes Guthaben {{assetToken}}. Das Token wird für die Auszahlung Ihrer {{assetToken}} benötigt; handeln oder übertragen Sie das {{mooToken}} nicht an Dritte!",
-  "Vault-DepositFee": "Es fällt eine <0,1% Einzahlungsgebühr an, keine Auszahlungsgebühr",
+  "Vault-DepositFee": "Es fällt eine {{depositFee}} Einzahlungsgebühr an, keine Auszahlungsgebühr",
   "Vault-Deposited": "Eingezahlt",
   "Vault-DepositSuccess": "Einzahlung erfolgreich",
   "Vault-DepositError": "Einzahlung fehlgeschlagen: {{error}}",
@@ -27,7 +27,7 @@
   "Vault-Withdrawing": "Auszahlen...",
   "Vault-WithdrawButton": "Auszahlen",
   "Vault-WithdrawButtonAll": "Alles auszahlen",
-  "Vault-WithdrawFee": "Für alle Vaults wird eine Ein- bzw. Auszahlungsgebühr von 0,05%-0,1% erhoben",
+  "Vault-WithdrawFeeGlobal": "Für alle Vaults wird eine Ein- bzw. Auszahlungsgebühr von 0,05%-0,1% erhoben",
   "Vault-WithdrawSuccess": "Auszahlung erfolgreich",
   "Vault-WithdrawError": "Auszahlung fehlgeschlagen",
   "Vault-WithdrawScenario": "Die Auszahlung führt zu:",
