--- a/src/locales/el/translation.json
+++ b/src/locales/el/translation.json
@@ -15,7 +15,7 @@
   "Vault-DepositButton": "Κατάθεση",
   "Vault-DepositButtonAll": "Κατάθεση όλων",
   "Vault-DepositTokensNote": "Θα λάβετε {{mooToken}} token ως απόδειξη της κατάθεσης {{assetToken}}. Η απόδειξη είναι απαραίτητη για την ανάληψη των {{assetToken}} σας, μην ανταλλάξετε ή στείλετε τα {{mooToken}} σας σε αγνώστους!",
-  "Vault-DepositFee": "Υπάρχουν <0.1% τέλη κατάθεσης, δεν υπάρχουν τέλη ανάληψης.",
+  "Vault-DepositFee": "Υπάρχουν {{depositFee}} τέλη κατάθεσης, δεν υπάρχουν τέλη ανάληψης.",
   "Vault-Deposited": "Κατατεθειμένα",
   "Vault-DepositSuccess": "Επιτυχής κατάθεση",
   "Vault-DepositError": "Αποτυχία κατάθεσης: {{error}}",
@@ -27,7 +27,7 @@
   "Vault-Withdrawing": "Ανάληψη...",
   "Vault-WithdrawButton": "Ανάληψη",
   "Vault-WithdrawButtonAll": "Ανάληψη όλων",
-  "Vault-WithdrawFee": "Υπάρχουν 0.05%-0.1% τέλη κατάθεσης ή ανάληψης σε όλα τα χρηματοκιβώτια",
+  "Vault-WithdrawFeeGlobal": "Υπάρχουν 0.05%-0.1% τέλη κατάθεσης ή ανάληψης σε όλα τα χρηματοκιβώτια",
   "Vault-WithdrawSuccess": "Επιτυχής ανάληψη",
   "Vault-WithdrawError": "Αποτυχία ανάληψης: {{error}}",
   "Vault-WithdrawScenario": "Η ανάληψη θα έχει ως αποτέλεσμα:",
