--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -15,7 +15,7 @@
   "Vault-DepositButton": "Depositar",
   "Vault-DepositButtonAll": "Depositar Todo",
   "Vault-DepositTokensNote": "Tu recibirás {{mooToken}} a modo de recibo por tu deposito de {{assetToken}}. El recibo es necesario para retirar tus {{assetToken}}, no comercies o transfieras el {{mooToken}} a extraños!",
-  "Vault-DepositFee": "Hay una tarifa de deposito <0.1%, no hay tarifa de retiro",
+  "Vault-DepositFee": "Hay una tarifa de deposito {{depositFee}}, no hay tarifa de retiro",
   "Vault-Deposited": "Depositado",
   "Vault-DepositSuccess": "Deposito exitoso",
   "Vault-DepositError": "Error de depósito: {{error}}",
@@ -27,7 +27,7 @@
   "Vault-Withdrawing": "Retirando...",
   "Vault-WithdrawButton": "Retirar",
   "Vault-WithdrawButtonAll": "Retirar Todo",
-  "Vault-WithdrawFee": "Hay una tarifa de retiro o depósito de 0.05%-0.1% en todas las bóvedas.",
+  "Vault-WithdrawFeeGlobal": "Hay una tarifa de retiro o depósito de 0.05%-0.1% en todas las bóvedas.",
   "Vault-WithdrawSuccess": "Retiro exitoso",
   "Vault-WithdrawError": "Error de retiro: {{error}",
   "Vault-WithdrawScenario": "El retiro resultará en:",
