--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -15,7 +15,7 @@
   "Vault-DepositButton": "Déposer",
   "Vault-DepositButtonAll": "Tout déposer",
   "Vault-DepositTokensNote": "Vous recevrez des {{mooToken}} comme preuve de dépots pour vos {{assetToken}}. Ce jeton est nécessaire pour retirer vos {{assetToken}} du coffre, vos {{mooToken}} ne doivent EN AUCUN CAS être vendu ou transferés vers un portefeuille que vous ne controlez pas!",
-  "Vault-DepositFee": "Frais de dépot <0.1%, pas de frais de retrait",
+  "Vault-DepositFee": "Frais de dépot {{depositFee}}, pas de frais de retrait",
   "Vault-Deposited": "Déposé",
   "Vault-DepositSuccess": "Dépot réussi",
   "Vault-DepositError": "Erreur lors du dépot: {{error}}",
@@ -27,7 +27,7 @@
   "Vault-Withdrawing": "Retrait en cours...",
   "Vault-WithdrawButton": "Retrait",
   "Vault-WithdrawButtonAll": "Tout retirer",
-  "Vault-WithdrawFee": "Il y a des frais (de retrait OU de dépot) de 0,05% à 0,1% sur tous les coffres",
+  "Vault-WithdrawFeeGlobal": "Il y a des frais (de retrait OU de dépot) de 0,05% à 0,1% sur tous les coffres",
   "Vault-WithdrawSuccess": "Retrait réussi",
   "Vault-WithdrawError": "Erreur lors du retrait: {{error}}",
   "Vault-WithdrawScenario": "Processus de retrait:",
