--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -15,7 +15,7 @@
   "Vault-DepositButton": "Deposita",
   "Vault-DepositButtonAll": "Deposita tutto",
   "Vault-DepositTokensNote": "Riceverai dei token {{mooToken}} come ricevuta dei tuoi token {{assetToken}} depositati. La ricevuta è necessaria per prelevare i tuoi token {{assetToken}}, non scambiare o trasferire i tuoi {{mooToken}} a sconosciuti!",
-  "Vault-DepositFee": "C'è una commissione di deposito di <0.1%. Non c'è alcuna commissione di prelievo.",
+  "Vault-DepositFee": "C'è una commissione di deposito di {{depositFee}}. Non c'è alcuna commissione di prelievo.",
   "Vault-Deposited": "Depositato",
   "Vault-DepositSuccess": "Deposito riuscito",
   "Vault-DepositError": "Errore durante il deposito: {{error}}",
@@ -27,7 +27,7 @@
   "Vault-Withdrawing": "Prelievo in corso...",
   "Vault-WithdrawButton": "Preleva",
   "Vault-WithdrawButtonAll": "Preleva tutto",
-  "Vault-WithdrawFee": "Ogni cassaforte ha commissione di prelievo o deposito di 0.05%-0.01%",
+  "Vault-WithdrawFeeGlobal": "Ogni cassaforte ha commissione di prelievo o deposito di 0.05%-0.01%",
   "Vault-WithdrawSuccess": "Prelievo riuscito",
   "Vault-WithdrawError": "Errore durante il prelievo: {{error}}",
   "Vault-WithdrawScenario": "Il prelievo prevede che:",
