--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -15,7 +15,7 @@
   "Vault-DepositButton": "Stort",
   "Vault-DepositButtonAll": "Stort alles",
   "Vault-DepositTokensNote": "Je ontvangt {{mooToken}} als stortingsbewijs van uw {{assetToken}} vermogen. Dit bewijs is nodig om uw {{assetToken}} op te nemen, verhandel of verstuur {{mooToken}} niet naar vreemden!",
-  "Vault-DepositFee": "Er zijn <0.1% stortingskosten, geen opnamekosten",
+  "Vault-DepositFee": "Er zijn {{depositFee}} stortingskosten, geen opnamekosten",
   "Vault-Deposited": "Gestort",
   "Vault-DepositSuccess": "Storting gelukt",
   "Vault-DepositError": "Storting mislukt: {{error}}",
@@ -27,7 +27,7 @@
   "Vault-Withdrawing": "Bezig met opnemen...",
   "Vault-WithdrawButton": "Opnemen",
   "Vault-WithdrawButtonAll": "Alles opnemen",
-  "Vault-WithdrawFee": "Er zijn 0.05%-0.1% opname- of stortingskosten op alle kluizen",
+  "Vault-WithdrawFeeGlobal": "Er zijn 0.05%-0.1% opname- of stortingskosten op alle kluizen",
   "Vault-WithdrawSuccess": "Opname gelukt",
   "Vault-WithdrawError": "Opname mislukt: {{error}}",
   "Vault-WithdrawScenario": "Opname resulteert in:",
