--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -12,14 +12,14 @@
   "Vault-ApprovalError": "Ошибка подтверждения: {{error}}",
   "Vault-DepositButton": "Депозит",
   "Vault-DepositButtonAll": "Внести все",
-  "Vault-DepositFee": "Комиссия за депозит <0.1%, вывод без комиссии",
+  "Vault-DepositFee": "Комиссия за депозит {{depositFee}}, вывод без комиссии",
   "Vault-Deposited": "Внесено",
   "Vault-DepositSuccess": "Успешный депозит",
   "Vault-DepositError": "Ошибка внесения: {{error}}",
   "Vault-Withdrawing": "Вывод...",
   "Vault-WithdrawButton": "Вывести",
   "Vault-WithdrawButtonAll": "Вывести все",
-  "Vault-WithdrawFee": "Комиссия за вывод средств со всех хранилищ - 0.05%-0.1%",
+  "Vault-WithdrawFeeGlobal": "Комиссия за вывод средств со всех хранилищ - 0.05%-0.1%",
   "Vault-WithdrawSuccess": "Успешный вывод",
   "Vault-WithdrawError": "Ошибка вывода: {{error}}",
   "Vault-Harvesting": "Сбор урожая...",
