--- a/src/locales/tr/translation.json
+++ b/src/locales/tr/translation.json
@@ -17,7 +17,7 @@
   "Vault-DepositButton": "Yatır",
   "Vault-DepositButtonAll": "Hepsini Yatır",
   "Vault-DepositTokensNote": "Yatıracağınız {{assetToken}} varlıkları için makbuz olarak {{mooToken}} tokenleri teslim alacaksınız. Bu tokenler {{assetToken}} varlıklarınızı geri almanız için gereklidir, {{mooToken}} tokenlerinizi takaslamayın veya tanımadıklarınıza göndermeyin.  ",
-  "Vault-DepositFee": "<%0.1 yatırma harcı vardır, çekme harcı yoktur",
+  "Vault-DepositFee": "{{depositFee}} yatırma harcı vardır, çekme harcı yoktur",
   "Vault-Deposited": "Yatırılan",
   "Vault-DepositSuccess": "Yatırma başarılı",
   "Vault-DepositError": "Yatırma hatası: {{error}}",
@@ -29,7 +29,7 @@
   "Vault-Withdrawing": "Çekiliyor...",
   "Vault-WithdrawButton": "Çek",
   "Vault-WithdrawButtonAll": "Hepsini Çek",
-  "Vault-WithdrawFee": "Tüm kasalarda %0.05-%0.1 çekme veya yatırma harcı vardır",
+  "Vault-WithdrawFeeGlobal": "Tüm kasalarda %0.05-%0.1 çekme veya yatırma harcı vardır",
   "Vault-WithdrawSuccess": "Çekme başarılı",
   "Vault-WithdrawError": "Çekme hatası: {{error}}",
   "Vault-WithdrawScenario": "Çekme gerçekleştirilirken:",
