--- a/src/locales/uk/translation.json
+++ b/src/locales/uk/translation.json
@@ -12,14 +12,14 @@
   "Vault-ApprovalError": "Помилка підтвердження: {{error}}",
   "Vault-DepositButton": "Внести",
   "Vault-DepositButtonAll": "Внести Все",
-  "Vault-DepositFee": "Комісія за депозит <0.1%, виведення без комісії",
+  "Vault-DepositFee": "Комісія за депозит {{depositFee}}, виведення без комісії",
   "Vault-Deposited": "Внесено",
   "Vault-DepositSuccess": "Внесено успішно",
   "Vault-DepositError": "Помилка внесення: {{error}}",
   "Vault-Withdrawing": "Зняття...",
   "Vault-WithdrawButton": "Зняти",
   "Vault-WithdrawButtonAll": "Зняти Все",
-  "Vault-WithdrawFee": "На всі сховища стягується плата за зняття 0,1%",
+  "Vault-WithdrawFeeGlobal": "На всі сховища стягується плата за зняття 0,1%",
   "Vault-WithdrawSuccess": "Успішне зняття",
   "Vault-WithdrawError": "Помилка зняття: {{error}}",
   "Vault-Harvesting": "Сбір врожаю...",
