--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -13,14 +13,14 @@
   "Vault-DepositButton": "存入",
   "Vault-DepositButtonAll": "存入全部",
   "Vault-DepositTokensNote": "您将获得{{mooToken}}代币作为存入{{assetToken}}的凭证. 该凭证后将用于日后提取您的{{assetToken}}所用. 请勿把{{mooToken}} 提转或交易给任何陌生人!",
-  "Vault-DepositFee": "该机枪池有<0.1% 存取费, 无提款费",
+  "Vault-DepositFee": "该机枪池有{{depositFee}} 存取费, 无提款费",
   "Vault-Deposited": "已存入",
   "Vault-DepositSuccess": "存入成功",
   "Vault-DepositError": "存入失败: {{error}}",
   "Vault-Withdrawing": "提出中...",
   "Vault-WithdrawButton": "提出",
   "Vault-WithdrawButtonAll": "提出全部",
-  "Vault-WithdrawFee": "所有机枪池均收取0.05%-0.1%的存款费或提款费",
+  "Vault-WithdrawFeeGlobal": "所有机枪池均收取0.05%-0.1%的存款费或提款费",
   "Vault-WithdrawSuccess": "提出成功",
   "Vault-WithdrawError": "提出失败: {{error}}",
   "Vault-Harvesting": "收割中...",
