--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -14,7 +14,7 @@
   "Vault-Withdrawing": "在提出中...",
   "Vault-WithdrawButton": "提出",
   "Vault-WithdrawButtonAll": "提出全部",
-  "Vault-WithdrawFee": "所有金库均收取0.1％的提款费",
+  "Vault-WithdrawFeeGlobal": "所有金库均收取0.1％的提款费",
   "Vault-MainTitle": "保险库",
   "Vault-SecondTitle": "存入赚币",
   "Hide-Zero-Balances": "隐藏0余额机枪池",
