--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,7 +17,8 @@
   "Vault-DepositButton": "Deposit",
   "Vault-DepositButtonAll": "Deposit All",
   "Vault-DepositTokensNote": "You will receive {{mooToken}} token as a receipt for your deposited {{assetToken}} assets. This token is needed to withdraw your {{assetToken}}, do not trade or transfer {{mooToken}} to strangers!",
-  "Vault-DepositFee": "There is a <0.1% deposit fee, no withdrawal fee",
+  "Vault-DepositFee": "There is a {{depositFee}} deposit fee, no withdrawal fee",
+  "Vault-DepositAndWithdrawFee": "There is a {{depositFee}} deposit fee and {{withdrawalFee}} withdrawal fee",
   "Vault-Deposited": "Deposited",
   "Vault-DepositSuccess": "Deposit success",
   "Vault-DepositError": "Deposit error: {{error}}",
@@ -29,7 +30,8 @@
   "Vault-Withdrawing": "Withdrawing...",
   "Vault-WithdrawButton": "Withdraw",
   "Vault-WithdrawButtonAll": "Withdraw All",
-  "Vault-WithdrawFee": "There is a 0.05%-0.1% withdrawal or deposit fee on all vaults",
+  "Vault-WithdrawFeeGlobal": "There is a 0.1% withdrawal fee on all vaults (unless exception noted on vault card)",
+  "Vault-WithdrawFee": "There is a {{withdrawalFee}} withdrawal fee",
   "Vault-WithdrawSuccess": "Withdrawal success",
   "Vault-WithdrawError": "Withdrawal error: {{error}}",
   "Vault-WithdrawScenario": "Withdrawal will result in:",
