--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -14,7 +14,7 @@
   "Vault-Withdrawing": "Penarikan...",
   "Vault-WithdrawButton": "Tarik",
   "Vault-WithdrawButtonAll": "Tarik Semua",
-  "Vault-WithdrawFee": "Ada biaya penarikan 0,1% di semua vault",
+  "Vault-WithdrawFeeGlobal": "Ada biaya penarikan 0,1% di semua vault",
   "Vault-MainTitle": "Kubah",
   "Vault-SecondTitle": "Setor & Dapatkan uang",
   "Hide-Zero-Balances": "Hide Zero Balances",
