--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -14,14 +14,14 @@
   "Vault-DepositButton": "Depósito",
   "Vault-DepositButtonAll": "Depositar tudo",
   "Vault-DepositTokensNote": "Você irá receber {{mooToken}} token como recibo dos seus ativos {{assetToken}}. Este recibo é necessário para resgatar seu {{assetToken}}, não negocie ou transfira seus {{mooToken}} para estranhos!",
-  "Vault-DepositFee": "Há uma taxa de déposito <0.1%, não há taxa de saque",
+  "Vault-DepositFee": "Há uma taxa de déposito {{depositFee}}, não há taxa de saque",
   "Vault-Deposited": "Depositado",
   "Vault-DepositSuccess": "Depositado com sucesso",
   "Vault-DepositError": "Erro ao depositar: {{error}}",
   "Vault-Withdrawing": "Retirando...",
   "Vault-WithdrawButton": "Retirar",
   "Vault-WithdrawButtonAll": "Retirar tudo",
-  "Vault-WithdrawFee": "Há uma taxa de retirada de 0.05%-0.1% em todos os cofres",
+  "Vault-WithdrawFeeGlobal": "Há uma taxa de retirada de 0.05%-0.1% em todos os cofres",
   "Vault-WithdrawSuccess": "Sacado com sucesso",
   "Vault-WithdrawError": "Erro ao sacar: {{error}}",
   "Vault-Harvesting": "Colhendo...",
