--- a/src/locales/se/translation.json
+++ b/src/locales/se/translation.json
@@ -13,7 +13,7 @@
   "Vault-Withdrawing": "Ta ut...",
   "Vault-WithdrawButton": "Ta ut",
   "Vault-WithdrawButtonAll": "Ta ut Allt",
-  "Vault-WithdrawFee": "Det finns en uttagsavgift på 0,1% på alla valv",
+  "Vault-WithdrawFeeGlobal": "Det finns en uttagsavgift på 0,1% på alla valv",
   "Vault-MainTitle": "Valv",
   "Vault-SecondTitle": "Sätt in & tjäna pengar",
   "Hide-Zero-Balances": "Hide Zero Balances",
