--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,40 +1,62 @@
 {
+  "App-Meta-Description": "Оптимизатор доходности с многими цепями",
   "Disclaimer": "Использование смарт-контрактов, токенов и криптовалюты всегда сопряжено с риском. Думайте своей головой перед инвестированием.",
-  "Network-Error": "Ошибка сети",
+  "Network-Error": "Подключитесь к правильной сети.",
   "Vault-Wallet": "Кошелек",
+  "Vault-ConnectWallet": "Подключить кошелек",
   "Vault-Balance": "Баланс",
+  "Vault-APR": "APR",
   "Vault-APY": "APY",
   "Vault-APYDaily": "В день",
   "Vault-TVL": "Общая стоимость",
+  "Vault-AutocompoundingNote": "Все хранилища автоматически собирают оптимальные ставки",
   "Vault-Approving": "Подтверждение...",
   "Vault-ApproveButton": "Подвердить",
   "Vault-ApprovalSuccess": "Успешно подтвердили",
   "Vault-ApprovalError": "Ошибка подтверждения: {{error}}",
   "Vault-DepositButton": "Депозит",
   "Vault-DepositButtonAll": "Внести все",
+  "Vault-DepositTokensNote": "Вы получите токен {{mooToken}} в качестве квитанции за ваши вложенные активы {{assetToken}}. Этот токен необходим для вывода вашего вклада {{assetToken}}, не продавайте или переводите {{mooToken}} другим людям!",
   "Vault-DepositFee": "Комиссия за депозит {{depositFee}}, вывод без комиссии",
   "Vault-Deposited": "Внесено",
   "Vault-DepositSuccess": "Успешный депозит",
   "Vault-DepositError": "Ошибка внесения: {{error}}",
+  "Vault-DepositScenario": "Депозит приведет к:",
+  "Vault-DepositScenarioSwap": "Чтобы сбалансировать пару ликвидности, обменяйте {{swapIn}} на {{swapOut}} (± комиссию на slippage {{slipageTolerance}} и комиссию за депозит, если таковые имеются)",
+  "Vault-DepositScenarioAddLiquidity": "Добавьте ликвидность, чтобы получить {{poolToken}}",
+  "Vault-DepositScenarioDepositToVault": "Получен депозит {{poolToken}} в хранилище Бифи",
+  "Vault-DepositScenarioReturnDust": "Вернуть неиспользованное остаточное количество {{tokenA}} и {{tokenB}} в Ваш кошелек",
   "Vault-Withdrawing": "Вывод...",
   "Vault-WithdrawButton": "Вывести",
   "Vault-WithdrawButtonAll": "Вывести все",
   "Vault-WithdrawFeeGlobal": "Комиссия за вывод средств со всех хранилищ - 0.05%-0.1%",
   "Vault-WithdrawSuccess": "Успешный вывод",
   "Vault-WithdrawError": "Ошибка вывода: {{error}}",
+  "Vault-WithdrawScenario": "Вывод приведет к:",
+  "Vault-WithdrawScenarioRedeem": "Возвращению токена {{mooToken}} за {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Убрать ликвидность из {{pool Token}}, чтобы получить {{tokenA}} и {{tokenB}}",
+  "Vault-WithdrawScenarioSwap": "Предполагаемый обмен {{swapIn}} за {{swapOut}} (± комиссия за slippage {{slipageTolerance}} и за снятие средств, если таковые имеются)",
+  "Vault-WithdrawScenarioTotal": "Предполагаемый перевод {{totalOut}} в Ваш кошелек",
   "Vault-Harvesting": "Сбор урожая...",
   "Vault-HarvestButton": "Собрать урожай",
-  "Vault-HarvestConfirm": "Подтвердить урожай??",
+  "Vault-HarvestConfirm": "Подтвердить урожай?",
   "Vault-HarvestDescription": "Ручная сборка НЕ ТРЕБУЕТСЯ. Все хранилища собираются автоматически. Это расширенная функция, предназначенная для опытных пользователей. Вы уверены, что хотите собрать урожай?",
   "Vault-HarvestSuccess": "Успешный сбор",
   "Vault-HarvestError": "Ошибка сбора: {{error}}",
   "Vault-LastHarvest": "Последний сбор",
   "Vault-MainTitle": "Хранилища",
   "Vault-SecondTitle": "Депозит & Заработок денег",
-  "Vault-DepositsPausedTitle": "Депозит приостановлен",
+  "Vault-DepositsPausedTitle": "Депозиты приостановлены",
   "Vault-DepositsPausedMsg": "Депозиты в это хранилище приостановлены.",
   "Vault-DepositsRetiredTitle": "УСТАРЕЛ",
   "Vault-DepositsRetiredMsg": "Сейф устарел. Выведите свои средства как можно скорее!",
+  "Vault-Staked": "Стейковано",
+  "Vault-Description": "Использует: {{vault}}",
+  "Vault-Network": "Выбрать сеть",
+  "Vault-Experimental": "Экспериментальный",
+  "Vault-Loading": "Загрузка хранилища",
+  "Vault-NotFound": "Хранилище {{vaultId}} не найдено",
+  "Vaults-Back": "Назад к хранилищам",
   "Hide-Zero-Balances": "Скрыть нулевые балансы",
   "Hide-Zero-Vault-Balances": "Хранилища со средствами",
   "Retired-Vaults": "Устаревшие хранилища",
@@ -44,6 +66,7 @@
   "Filters-Sort": "Сортировать по",
   "Filters-All": "Все",
   "Filters-Default": "По умолчанию",
+  "Filters-Reset": "Очистить фильтры",
   "Confirm": "Подтвердить",
   "Cancel": "Отклонить",
   "No-Results": "Нет результатов",
@@ -54,18 +77,43 @@
   "vote": "vote",
   "stats": "stats",
   "app": "app",
-  "socials": "Социальные сети",
-  "buy": "buy",
+  "socials": "Соцсети",
+  "buy": "купить",
   "products": "Продукты",
   "Powered-By": "Сделано",
-  "Stake-Table-Staked": "СТЕЙКАТЬ",
-  "Stake-Table-Total": "ПУЛ",
-  "Stake-Table-Apy": "APY",
-  "Stake-Balancer-Earned": "ЗАРАБОТАЛ",
   "IFO-Guide": "IFO Руководство",
   "Available-To-Stake": "Доступно для стейкинга",
   "Stake": "Стейкать",
-  "Available-To-Unstake": "Доступно для Анстейка",
+  "Available-To-Unstake": "Доступно для анстейка",
   "Unstake": "Анстейк",
-  "Max": "Максимум"
+  "Max": "Максимум",
+  "Coming-Soon": "Скоро доступно",
+  "Finished": "Закончено",
+  "End": "Конец",
+  "Stakes-Meta-Title": "Бусты - {{networkName}}",
+  "Stake-Meta-Title": "Заработать {{earnedToken}} - буст от {{boostedBy}} - {{networkName}}",
+  "Stake-Button-Stake": "Стейкать",
+  "Stake-Button-Claim": "Требовать",
+  "Stake-Button-Approval": "Подтвердить",
+  "Stake-Button-Stake-Tokens": "Стейкинг токенов",
+  "Stake-Button-Unstake-Tokens": "Анстейкинг токенов",
+  "Stake-Button-Claim-Rewards": "Требовать награды",
+  "Stake-Button-Exit": "Требовать и анстейкать",
+  "Stake-Balancer-Your-Balance": "Ваш баланс",
+  "Stake-Balancer-Current-Staked": "Сейчас стейковано",
+  "Stake-Balancer-Rewards-Available": "Доступные награды",
+  "Stake-Balancer-Half-Time": "Половина времени",
+  "Stake-BoostedBy": "Буст от {{name}}",
+  "Stake-Button-Back": "Назад",
+  "Stake-Pool-Retired": "Пул закончился, выведите ваши деньги.",
+  "Stake-Total-Value-Locked": "Общее кол. стейк. {{mooToken}}",
+  "Stake-Your-Pool": "Ваш пул",
+  "Stake-Current-Daily": "Текущая дневная ставка",
+  "Add-Liquidity": "Добавить ликвидность",
+  "Remove-Liquidity": "Убрать ликвидность",
+  "Buy-Token": "Купить токен",
+  "Wrap-BNB": "Обернуть BNB",
+  "Boost": "Буст",
+  "Experimental": "Экспериментальный",
+  "Select-Network": "Выбрать сеть"
 }
