Russian localization tweaks & field sync (#530)
* Russian localization tweaks & field sync

* One Russian localization fixup

* Pablo's Russian localization fixes

Co-authored-by: PCRyan <pcyranjr@gmail.com>

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -9,15 +9,16 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "В день",
   "Vault-TVL": "Общая стоимость",
-  "Vault-AutocompoundingNote": "Все хранилища автоматически собирают оптимальные ставки",
+  "Vault-AutocompoundingNote": "Все хранилища автоматически реинвестируют ваш депозит",
   "Vault-Approving": "Подтверждение...",
-  "Vault-ApproveButton": "Подвердить",
+  "Vault-ApproveButton": "Подтвердить",
   "Vault-ApprovalSuccess": "Успешно подтвердили",
   "Vault-ApprovalError": "Ошибка подтверждения: {{error}}",
   "Vault-DepositButton": "Депозит",
   "Vault-DepositButtonAll": "Внести все",
   "Vault-DepositTokensNote": "Вы получите токен {{mooToken}} в качестве квитанции за ваши вложенные активы {{assetToken}}. Этот токен необходим для вывода вашего вклада {{assetToken}}, не продавайте или переводите {{mooToken}} другим людям!",
   "Vault-DepositFee": "Комиссия за депозит {{depositFee}}, вывод без комиссии",
+  "Vault-DepositAndWithdrawFee": "Комиссия за депозит - {{depositFee}}. Комиссия за снятие средств - {{withdrawalFee}}.",
   "Vault-Deposited": "Внесено",
   "Vault-DepositSuccess": "Успешный депозит",
   "Vault-DepositError": "Ошибка внесения: {{error}}",
@@ -29,7 +30,8 @@
   "Vault-Withdrawing": "Вывод...",
   "Vault-WithdrawButton": "Вывести",
   "Vault-WithdrawButtonAll": "Вывести все",
-  "Vault-WithdrawFeeGlobal": "Комиссия за вывод средств со всех хранилищ - 0.05%-0.1%",
+  "Vault-WithdrawFeeGlobal": "Комиссия за снятие средств - 0,1% для всех хранилищ (если на карте хранилища не указано иное).",
+  "Vault-WithdrawFee": "Комиссия за снятие средств - {{withdrawalFee}}.",
   "Vault-WithdrawSuccess": "Успешный вывод",
   "Vault-WithdrawError": "Ошибка вывода: {{error}}",
   "Vault-WithdrawScenario": "Вывод приведет к:",
@@ -56,7 +58,7 @@
   "Vault-Experimental": "Экспериментальный",
   "Vault-Loading": "Загрузка хранилища",
   "Vault-NotFound": "Хранилище {{vaultId}} не найдено",
-  "Vaults-Back": "Назад к хранилищам",
+  "Vaults-Back": "Детали хранилища",
   "Hide-Zero-Balances": "Скрыть нулевые балансы",
   "Hide-Zero-Vault-Balances": "Хранилища со средствами",
   "Retired-Vaults": "Устаревшие хранилища",
