Hydrate default withdrawalFee & depositFee on pool objects while initializing. Adjust display of these fees on vault card. Associated adjustment to localization strings.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,8 +17,7 @@
   "Vault-DepositButton": "Deposit",
   "Vault-DepositButtonAll": "Deposit All",
   "Vault-DepositTokensNote": "You will receive {{mooToken}} token as a receipt for your deposited {{assetToken}} assets. This token is needed to withdraw your {{assetToken}}, do not trade or transfer {{mooToken}} to strangers!",
-  "Vault-DepositFee": "{{depositFee}} deposit fee, no withdrawal fee",
-  "Vault-DepositAndWithdrawFee": "{{depositFee}} deposit fee and {{withdrawalFee}} withdrawal fee",
+  "Vault-DepositAndWithdrawFee": "Deposit fee: {{depositFee}}, Withdrawal fee: {{withdrawalFee}}",
   "Vault-Deposited": "Deposited",
   "Vault-DepositSuccess": "Deposit success",
   "Vault-DepositError": "Deposit error: {{error}}",
@@ -31,7 +30,6 @@
   "Vault-WithdrawButton": "Withdraw",
   "Vault-WithdrawButtonAll": "Withdraw All",
   "Vault-WithdrawFeeGlobal": "0.1% withdrawal fee on all vaults (unless exception noted on vault card)",
-  "Vault-WithdrawFee": "{{withdrawalFee}} withdrawal fee",
   "Vault-WithdrawSuccess": "Withdrawal success",
   "Vault-WithdrawError": "Withdrawal error: {{error}}",
   "Vault-WithdrawScenario": "Withdrawal will result in:",
