--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
   "App-Meta-Description": "The Multichain Yield Optimizer",
   "Disclaimer": "Using Smart Contracts, Tokens, and Crypto is always a risk. DYOR before investing.",
-  "Network-Error": "Connect to the correct network please.",
+  "Network-Error": "Connect to {{network}} please.",
   "Vault-Wallet": "Wallet",
   "Vault-ConnectWallet": "Connect Wallet",
   "Vault-Balance": "Balance",
