Mandarin localization re-update

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1,6 +1,6 @@
 {
   "App-Meta-Description": "多链收益优化器",
-  "Disclaimer": "操作智能合同,代币,加密货币有一定的风险. 投资前请务必做好自己的调查和研究.",
+  "Disclaimer": "操作智能合约,代币,加密货币有一定的风险. 投资前请务必做好自己的调查和研究.",
   "Network-Error": "请选择正确的网路.",
   "Vault-Wallet": "钱包",
   "Vault-ConnectWallet": "连接钱包",
@@ -9,34 +9,34 @@
   "Vault-APY": "年收益率",
   "Vault-APYDaily": "日收益率",
   "Vault-TVL": "锁定总价值",
-  "Vault-AutocompoundingNote": "所有机枪池以同一最佳利率自动复利",
+  "Vault-AutocompoundingNote": "所有机枪池均以最佳速度进行自动复利",
   "Vault-Approving": "批准中...",
   "Vault-ApproveButton": "批准",
   "Vault-ApprovalSuccess": "批准成功",
   "Vault-ApprovalError": "批准失败: {{error}}",
   "Vault-DepositButton": "存入",
   "Vault-DepositButtonAll": "存入全部",
-  "Vault-DepositTokensNote": "您将获得{{mooToken}}代币作为存入{{assetToken}}的凭证. 该凭证后将用于日后提取您的{{assetToken}}所用. 请勿把{{mooToken}} 提转或交易给任何陌生人!",
+  "Vault-DepositTokensNote": "您将获得{{mooToken}}代币作为存入{{assetToken}}的凭证. 该凭证将用于日后提取您的{{assetToken}}所用. 请勿把{{mooToken}} 提转或交易给任何陌生人!",
   "Vault-DepositAndWithdrawFee": "存款费: {{depositFee}}, 提款费: {{withdrawalFee}}",
   "Vault-Deposited": "已存入",
   "Vault-DepositSuccess": "存入成功",
   "Vault-DepositError": "存入失败: {{error}}",
   "Vault-DepositScenario": "存款将会导致：",
-  "Vault-DepositScenarioSwap": "为了平衡一对流动性对，用{{swapIn}}换取{{swapOut}}(如果存在的话, +-{{slippageTolerance}}滑动和存款费用)",
+  "Vault-DepositScenarioSwap": "为了平衡一对流动性对，用{{swapIn}}换取{{swapOut}}(可能存在±{{slippageTolerance}}滑点和存款费用)",
   "Vault-DepositScenarioAddLiquidity": "增加流动性以收到{{poolToken}}",
   "Vault-DepositScenarioDepositToVault": "将收到的{{poolToken}}存入Beefy机枪池",
-  "Vault-DepositScenarioReturnDust": "将没有使用过的{{tokenA}}和{{tokenB}}的追踪量返还到你的钱包",
+  "Vault-DepositScenarioReturnDust": "将未使用过的微量的{{tokenA}}和{{tokenB}}返还到您的钱包",
   "Vault-Withdrawing": "提出中...",
   "Vault-WithdrawButton": "提出",
   "Vault-WithdrawButtonAll": "提出全部",
-  "Vault-WithdrawFeeGlobal": "机枪池全球提款费用",
+  "Vault-WithdrawFeeGlobal": "所有机枪池的提款费均为0.1%，除非机枪池卡上注明例外情况",
   "Vault-WithdrawSuccess": "提出成功",
   "Vault-WithdrawError": "提出失败: {{error}}",
   "Vault-WithdrawScenario": "提出将会导致：",
   "Vault-WithdrawScenarioRedeem": "将{{mooToken}}代币兑换为{{poolToken}}",
   "Vault-WithdrawScenarioRemoveLiquidity": "从{{poolToken}}中去除流动性以接收{{tokenA}}和{{tokenB}}",
-  "Vault-WithdrawScenarioSwap": "用估计到的{{swapIn}}换取{{swapOut}}(如果存在的话，+-{{slippageTolerance}}滑动和存款费用)",
-  "Vault-WithdrawScenarioTotal": "转移估计{{totalOut}}到你的钱包中",
+  "Vault-WithdrawScenarioSwap": "用预计的{{swapIn}}换取{{swapOut}}(可能存在±{{slippageTolerance}}滑点和存款费用)",
+  "Vault-WithdrawScenarioTotal": "转移估计{{totalOut}}到您的钱包中",
   "Vault-Harvesting": "收割中...",
   "Vault-HarvestButton": "收割",
   "Vault-HarvestConfirm": "确认收割?",
@@ -112,7 +112,7 @@
   "Add-Liquidity": "增加流动性",
   "Remove-Liquidity": "减少流动性",
   "Buy-Token": "购买代币",
-  "Wrap-BNB": "封装 BNB",
+  "Wrap-BNB": "Wrap BNB",
   "Boost": "强化",
   "Experimental": "试验版",
   "Select-Network": "选择网路"
