make labels translatable

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -56,6 +56,12 @@
   "Vault-Experimental": "Experimental",
   "Vault-Loading": "Loading Vault",
   "Vault-NotFound": "Vault {{vaultId}} not found",
+  "Vault-Breakdown-VaultApr": "Vault APR",
+  "Vault-Breakdown-TradingApr": "Trading APR",
+  "Vault-Breakdown-BoostApr": "Boost APR",
+  "Vault-Breakdown-VaultDaily": "Vault Daily",
+  "Vault-Breakdown-TradingDaily": "Trading Daily",
+  "Vault-Breakdown-BoostDaily": "Boost Daily",
   "Vaults-Back": "Back to vaults",
   "Hide-Zero-Balances": "Hide Zero Balances",
   "Hide-Zero-Vault-Balances": "Deposited Vaults",
