cake banner CAKE.png > CAKE.svg

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -62,6 +62,14 @@
   "Vault-Breakdown-VaultDaily": "Vault Daily",
   "Vault-Breakdown-TradingDaily": "Trading Daily",
   "Vault-Breakdown-BoostDaily": "Boost Daily",
+  "Vault-Banner-CakeV2-StakeLabel": "Stake your {{symbol}}",
+  "Vault-Banner-CakeV2-StakeValue": "New pure {{symbol}} vault",
+  "Vault-Banner-CakeV2-SaferLabel": "Safer",
+  "Vault-Banner-CakeV2-SaferValue": "{{count}} middlemen",
+  "Vault-Banner-CakeV2-SmarterLabel": "Smarter",
+  "Vault-Banner-CakeV2-SmarterValue": "{{count}}+ annual compounds",
+  "Vault-Banner-CakeV2-FairerLabel": "Fairer",
+  "Vault-Banner-CakeV2-FairerValue": "{{percent}}% less fees",
   "Vaults-Back": "Back to vaults",
   "Hide-Zero-Balances": "Hide Zero Balances",
   "Hide-Zero-Vault-Balances": "Deposited Vaults",
