--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -1,12 +1,15 @@
 {
-  "Disclaimer": "Usar smart contracts, tokens, e crypto é sempre um risco. Faça sua própria pesquisa(DYOR) antes de investir.",
+  "App-Meta-Description": "O otimizador de ganhos de múltiplas chains",
+  "Disclaimer": "Usar smart contracts, tokens, e crypto é sempre um risco. Faça sua própria pesquisa (DYOR) antes de investir.",
   "Network-Error": "Conecte-se a rede correta, por favor.",
   "Vault-Wallet": "Carteira",
   "Vault-ConnectWallet": "Conectar Carteira",
   "Vault-Balance": "Saldo",
+  "Vault-APR": "APR",
   "Vault-APY": "APY",
   "Vault-APYDaily": "Lucro diário",
   "Vault-TVL": "TVL",
+  "Vault-AutocompoundingNote": "Todos os cofres são compostos automaticamente a uma taxa ideal",
   "Vault-Approving": "Aprovando...",
   "Vault-ApproveButton": "Aprovar",
   "Vault-ApprovalSuccess": "Aprovado com sucesso",
@@ -14,20 +17,30 @@
   "Vault-DepositButton": "Depósito",
   "Vault-DepositButtonAll": "Depositar tudo",
   "Vault-DepositTokensNote": "Você irá receber {{mooToken}} token como recibo dos seus ativos {{assetToken}}. Este recibo é necessário para resgatar seu {{assetToken}}, não negocie ou transfira seus {{mooToken}} para estranhos!",
-  "Vault-DepositFee": "Há uma taxa de déposito {{depositFee}}, não há taxa de saque",
+  "Vault-DepositAndWithdrawFee": "Taxa depósito: {{depositFee}}, Taxa saque: {{withdrawalFee}}",
   "Vault-Deposited": "Depositado",
   "Vault-DepositSuccess": "Depositado com sucesso",
   "Vault-DepositError": "Erro ao depositar: {{error}}",
+  "Vault-DepositScenario": "O depósito irá resultar em:",
+  "Vault-DepositScenarioSwap": "Para balancear um par de liquidez, troque {{swapIn}} por {{swapOut}} (±{{slippageTolerance}} de spread e taxa de depósito, se houver)",
+  "Vault-DepositScenarioAddLiquidity": "Adicione liquidez para receber {{poolToken}}",
+  "Vault-DepositScenarioDepositToVault": "Recebido o depósito de {{poolToken}} no cofre Beefy",
+  "Vault-DepositScenarioReturnDust": "Retorne montante não utilizado de {{tokenA}} e {{tokenB}} para sua carteira",
   "Vault-Withdrawing": "Retirando...",
   "Vault-WithdrawButton": "Retirar",
   "Vault-WithdrawButtonAll": "Retirar tudo",
   "Vault-WithdrawFeeGlobal": "Há uma taxa de retirada de 0.05%-0.1% em todos os cofres",
   "Vault-WithdrawSuccess": "Sacado com sucesso",
   "Vault-WithdrawError": "Erro ao sacar: {{error}}",
+  "Vault-WithdrawScenario": "O saque irá resulta em:",
+  "Vault-WithdrawScenarioRedeem": "Resgatar token {{mooToken}} por {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Remover liquidez de {{poolToken}} para receber {{tokenA}} e {{tokenB}}",
+  "Vault-WithdrawScenarioSwap": "Troque o valor estimado de {{swapIn}} por {{swapOut}} (±{{slippageTolerance}} de spread e taxa de saque, se houver)",
+  "Vault-WithdrawScenarioTotal": "Transfira aproximadamente {{totalOut}} para sua carteira",
   "Vault-Harvesting": "Colhendo...",
   "Vault-HarvestButton": "Colheita",
   "Vault-HarvestConfirm": "Confirmar Colheita?",
-  "Vault-HarvestDescription": "Ao realizar a colheita, você está ajudando todos a coletar os lucros gerados neste cofre. Você irá receber {{callFee}}% dos ganhos do cofre desde a última colheita.",
+  "Vault-HarvestDescription": "A colheita manual NÃO É NECESSÁRIA. Todos os cofres compõe automaticamente. Esse é um recurso avançado para usuários experientes. Você tem certeza que deseja fazer a colheita?",
   "Vault-HarvestSuccess": "Colhido com sucesso",
   "Vault-HarvestError": "Erro ao colher: {{error}}",
   "Vault-LastHarvest": "Última Colheita",
@@ -40,8 +53,23 @@
   "Vault-Staked": "Investido",
   "Vault-Description": "Usa: {{vault}}",
   "Vault-Network": "Rede",
+  "Vault-Experimental": "Experimental",
   "Vault-Loading": "Carregando Cofre",
   "Vault-NotFound": "Cofre {{vaultId}} não encontrado",
+  "Vault-Breakdown-VaultApr": "APR do Cofre",
+  "Vault-Breakdown-TradingApr": "APR de Negociação",
+  "Vault-Breakdown-BoostApr": "APR do Turbinado",
+  "Vault-Breakdown-VaultDaily": "Cofre Diário",
+  "Vault-Breakdown-TradingDaily": "Negociado Diário",
+  "Vault-Breakdown-BoostDaily": "Turbinado Diário",
+  "Vault-Banner-CakeV2-StakeLabel": "Invista seu {{symbol}}",
+  "Vault-Banner-CakeV2-StakeValue": "Novo cofre puro {{symbol}}",
+  "Vault-Banner-CakeV2-SaferLabel": "Mais seguro",
+  "Vault-Banner-CakeV2-SaferValue": "{{count}} intermediários",
+  "Vault-Banner-CakeV2-SmarterLabel": "Mais inteligente",
+  "Vault-Banner-CakeV2-SmarterValue": "{{count}}+ composições anuais",
+  "Vault-Banner-CakeV2-FairerLabel": "Mais justo",
+  "Vault-Banner-CakeV2-FairerValue": "{{percent}}% menos taxas",
   "Vaults-Back": "Voltar para cofres",
   "Hide-Zero-Balances": "Ocultar Ativos Com Saldo Zero",
   "Hide-Zero-Vault-Balances": "Cofres com Depósitos",
@@ -60,13 +88,13 @@
   "news": "notícias",
   "source": "fontes",
   "gov": "gov",
-  "vote": "vote",
+  "vote": "votar",
   "stats": "painel",
   "app": "app",
   "socials": "sociais",
   "buy": "comprar",
   "products": "produtos",
-  "Powered-By": "POWERED BY",
+  "Powered-By": "FORNECIDO POR",
   "IFO-Guide": "Guia do IFO",
   "Available-To-Stake": "Disponível para Investir",
   "Stake": "Investir",
@@ -76,9 +104,11 @@
   "Coming-Soon": "Em Breve",
   "Finished": "Concluído",
   "End": "Fim",
+  "Stakes-Meta-Title": "Turbinados - {{networkName}}",
+  "Stake-Meta-Title": "Ganhe {{earnedToken}} - Turbinado por {{boostedBy}} - {{networkName}}",
   "Stake-Button-Stake": "Investir",
   "Stake-Button-Claim": "Reivindicar",
-  "Stake-Button-Approval": "Approvar",
+  "Stake-Button-Approval": "Aprovar",
   "Stake-Button-Stake-Tokens": "Investir Tokens",
   "Stake-Button-Unstake-Tokens": "Resgatar Tokens",
   "Stake-Button-Claim-Rewards": "Reivindicar Recompensas",
@@ -90,13 +120,13 @@
   "Stake-BoostedBy": "Turbinado por {{name}}",
   "Stake-Button-Back": "Voltar",
   "Stake-Pool-Retired": "O pool chegou ao seu fim, saque seus fundos.",
-  "Stake-Total-Value-Locked": "Valor Total Bloqueado",
+  "Stake-Total-Value-Locked": "Total {{mooToken}} Investido",
   "Stake-Your-Pool": "Seu Pool",
   "Stake-Current-Daily": "Taxa de Juros Diária",
   "Add-Liquidity": "Adicionar Liquidez",
   "Remove-Liquidity": "Remover Liquidez",
   "Buy-Token": "Comprar Token",
-  "Wrap-BNB": "Wrap BNB",
+  "Wrap-BNB": "Embrulhar BNB",
   "Boost": "Turbinar",
   "Experimental": "Experimental",
   "Select-Network": "Selecione a Rede"
