--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -14,7 +14,8 @@
   "Vault-ApproveButton": "Approve",
   "Vault-ApprovalSuccess": "Approval success",
   "Vault-ApprovalError": "Approval error: {{error}}",
-  "Vault-Bifibuyback": "Daily BIFI Buyback",
+  "Vault-Bifibuyback": "BIFI Buyback",
+  "Vault-BifibuybackDaySuffix": "day",
   "Vault-DepositButton": "Deposit",
   "Vault-DepositButtonAll": "Deposit All",
   "Vault-DepositTokensNote": "You will receive {{mooToken}} token as a receipt for your deposited {{assetToken}} assets. This token is needed to withdraw your {{assetToken}}, do not trade or transfer {{mooToken}} to strangers!",
