--- a/src/locales/fil/translation.json
+++ b/src/locales/fil/translation.json
@@ -1,6 +1,6 @@
 {
   "App-Meta-Description": "Ang Multichain Yield Optimizer",
-  "Disclaimer": "Alalahanin na magingat sa pagamit ng Smart Contracts, Tokens and Crypto. DYOR bago maginvest.",
+  "Disclaimer": "Alalahaning magingat sa pagamit ng Smart Contracts, Tokens and Crypto. DYOR bago maginvest.",
   "Network-Error": "Magconnect sa {{network}}.",
   "Vault-Wallet": "Wallet",
   "Vault-ConnectWallet": "Connect Wallet",
@@ -9,14 +9,14 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Daily",
   "Vault-TVL": "TVL",
-  "Vault-AutocompoundingNote": "Lahat ng vaults ay nagauautocompound sa pinakaoptimal na rate",
+  "Vault-AutocompoundingNote": "All vaults autocompound at an optimal rate",
   "Vault-Approving": "Approving...",
   "Vault-ApproveButton": "Approve",
   "Vault-ApprovalSuccess": "Approval success",
   "Vault-ApprovalError": "Approval error: {{error}}",
-  "Vault-DepositButton": "Hulog o Desposito",
+  "Vault-DepositButton": "I-Deposit",
   "Vault-DepositButtonAll": "Kabuuang Hulog",
-  "Vault-DepositTokensNote": "Ikaw ay makakatanggap ng {{mooToken}} bilang resibo sa iyong hinulog {{assetToken}} assets. Kailangan mo ita upang ma-withdraw ang iyong {{assetToken}}, huwag itrade o transfer {{mooToken}} sa di kakilala!",
+  "Vault-DepositTokensNote": "Ikaw ay makakatanggap ng {{mooToken}} bilang resibo sa iyong hinulog na {{assetToken}} assets. Kailangan mo ito upang mai-withdraw ang {{assetToken}}, huwag itrade o transfer ang {{mooToken}} sa di kakilala!",
   "Vault-DepositAndWithdrawFee": "Deposit Fee: {{depositFee}}, Withdrawal fee: {{withdrawalFee}}",
   "Vault-Deposited": "Dineposito",
   "Vault-DepositSuccess": "Deposit success",
@@ -33,13 +33,13 @@
   "Vault-WithdrawSuccess": "Withdrawal success",
   "Vault-WithdrawError": "Withdrawal error: {{error}}",
   "Vault-WithdrawScenario": "Ang magiging resulta ng nai-withdraw:",
-  "Vault-WithdrawScenarioRedeem": "Makakuha ng {{mooToken}} token para sa {{poolToken}}",
+  "Vault-WithdrawScenarioRedeem": "Makakuha ka ng {{mooToken}} token para sa {{poolToken}}",
   "Vault-WithdrawScenarioRemoveLiquidity": "Tanggalin ang liquidity sa {{poolToken}} para makuha ang {{tokenA}} at {{tokenB}}",
   "Vault-WithdrawScenarioSwap": "Pagpalitin ang estimated {{swapIn}} sa {{swapOut}} (±{{slippageTolerance}} slippage at withdrawal fee, kung meron man)",
   "Vault-WithdrawScenarioTotal": "Ilipat ang estimated na total {{totalOut}} sa iyong wallet",
   "Vault-Harvesting": "Harvest...",
   "Vault-HarvestButton": "Harvest",
-  "Vault-HarvestConfirm": "Kunpirmahin ang harvest?",
+  "Vault-HarvestConfirm": "Kumpirmahin ang harvest?",
   "Vault-HarvestDescription": "Ang pag harvest ng manual ay di kailangan. Lahat ng vaults ay nagauauto compound. Eto ay isang advanced feature para sa mga experienced users. Sigurado ka na bang mag harvest?",
   "Vault-HarvestSuccess": "Harvest Success",
   "Vault-HarvestError": "Harvest error: {{error}}",
@@ -71,10 +71,10 @@
   "Vault-Banner-CakeV2-FairerLabel": "Mas patas",
   "Vault-Banner-CakeV2-FairerValue": "{{percent}}% less fees",
   "Vaults-Back": "Back to vaults",
-  "Hide-Zero-Balances": "Itago ang walang balanse",
+  "Hide-Zero-Balances": "Hide Zero Balances",
   "Hide-Zero-Vault-Balances": "Dinepositong Vaults",
-  "Retired-Vaults": "Itinigil na Vaults",
-  "Filters-Platform": "Plataporma",
+  "Retired-Vaults": "Retired Vaults",
+  "Filters-Platform": "Mga Platforms",
   "Filters-Vault-Type": "Uri ng Vault",
   "Filters-Asset": "Asset",
   "Filters-Sort": "Isa-ayos ukol sa",
