tweak Malay localization

--- a/src/locales/ms/translation.json
+++ b/src/locales/ms/translation.json
@@ -14,6 +14,7 @@
   "Vault-ApproveButton": "Lulus",
   "Vault-ApprovalSuccess": "Berjaya diluluskan",
   "Vault-ApprovalError": "Silap diluluskan: {{error}}",
+  "Vault-BifiBuyback": "Beli Balik BIFI {{amount}}/hari",
   "Vault-DepositButton": "Deposit",
   "Vault-DepositButtonAll": "Deposit Semua",
   "Vault-DepositTokensNote": "Anda akan menerima token {{mooToken}} sebagai resit untuk aset {{assetToken}} yang telah anda depositkan. Token ini diperlukan untuk mengeluarkan {{assetToken}} anda, jangan berdagang atau memindahkan {{mooToken}} kepada orang yang tidak dikenali!",
@@ -22,14 +23,14 @@
   "Vault-DepositSuccess": "Deposit berjaya",
   "Vault-DepositError": "Silap Deposit: {{error}}",
   "Vault-DepositScenario": "Deposit akan mengakibatkan:",
-  "Vault-DepositScenarioSwap": "Untuk mengimbangi satu liquidity pair, {{swapIn}} akan ditukar kepada {{swapOut}} (±{{slippageTolerance}} gelinciran dan bayaran deposit, jika ada)",
+  "Vault-DepositScenarioSwap": "Untuk mengimbangi satu pasangan liquidity, {{swapIn}} akan ditukar kepada {{swapOut}} (±{{slippageTolerance}} gelinciran dan bayaran deposit, jika ada)",
   "Vault-DepositScenarioAddLiquidity": "Liquidity ditambah untuk menerima {{poolToken}}",
   "Vault-DepositScenarioDepositToVault": "Deposit {{poolToken}} yang diterima ke dalam Beefy vault",
   "Vault-DepositScenarioReturnDust": "Sedikit daripada jumlah {{tokenA}} dan {{tokenB}} yang tidak digunakan akan dikembalikan ke dompet anda",
   "Vault-Withdrawing": "Mengeluarkan...",
-  "Vault-WithdrawButton": "Mengeluar",
-  "Vault-WithdrawButtonAll": "Mengeluarkan Semua",
-  "Vault-WithdrawFeeGlobal": "Bayaran pengeluaran 0.1% untuk semua vault (kecuali pengecualian yang dinyatakan pada kad vault)",
+  "Vault-WithdrawButton": "Keluar",
+  "Vault-WithdrawButtonAll": "Keluar Semua",
+  "Vault-WithdrawFeeGlobal": "Bayaran pengeluaran 0.1% untuk semua vault (kecuali pengecualian dinyatakan pada kad vault)",
   "Vault-WithdrawSuccess": "Pengeluaran berjaya",
   "Vault-WithdrawError": "Silap pengeluaran: {{error}}",
   "Vault-WithdrawScenario": "Pengeluaran akan mengakibatkan:",
