redo language selection

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -85,6 +85,7 @@
   "Confirm": "Confirm",
   "Cancel": "Cancel",
   "No-Results": "No Results",
+  "Nav-HelpTranslate": "Help to translate",
   "docs": "docs",
   "news": "news",
   "source": "source",
