--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -55,7 +55,7 @@
   "Vault-Description": "Uses: {{vault}}",
   "Vault-Network": "Select Network",
   "Vault-Experimental": "Experimental",
-  "Vault-Loading": "Loading Vault",
+  "Vault-Loading": "Loading Vault...",
   "Vault-NotFound": "Vault {{vaultId}} not found",
   "Vault-Breakdown-VaultApr": "Vault APR",
   "Vault-Breakdown-TradingApr": "Trading APR",
