Make 'Single Assets', 'Stable LPs' and 'Stables' translatable

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -82,6 +82,9 @@
   "Filters-All": "All",
   "Filters-Default": "Default",
   "Filters-Reset": "Clear Filters",
+  "Filters-Type-SingleAssets": "Single Assets",
+  "Filters-Type-StableLPs": "Stable LPs",
+  "Filters-Type-Stables": "Stables",
   "Confirm": "Confirm",
   "Cancel": "Cancel",
   "No-Results": "No Results",
