Disable auto network switch/add user network switch (#610)
* -auto network switch prompt
+ui for switching network/app

* Remove `PoolAccordion`
Rename `Vault-ConnectWallet` string to `Network-ConnectWallet`
Remove `Network-Error` string

* fix fantom app url

* add manual wallet switch note

* Remove Network-Error and rename Vault-ConnectWallet for newly added pl translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,9 +1,18 @@
 {
   "App-Meta-Description": "The Multichain Yield Optimizer",
   "Disclaimer": "Using Smart Contracts, Tokens, and Crypto is always a risk. DYOR before investing.",
-  "Network-Error": "Connect to {{network}} please.",
+  "Network-UnknownError": "An unknown error has occurred.",
+  "Network-ConnectionRequired": "Wallet connection to {{network}} required.",
+  "Network-Supports": "This app supports {{network}}.",
+  "Network-ConnectedTo": "You are currently connected to {{network}}.",
+  "Network-ConnectedUnsupported": "You are currently connected to an unsupported network.",
+  "Network-ConnectWallet": "Connect wallet",
+  "Network-DisconnectWallet": "Disconnect wallet",
+  "Network-SwitchToNetwork": "Switch to {{network}} network",
+  "Network-GoToApp": "Go to {{network}} app",
+  "Network-SwitchNote": "You may need to manually switch network via your wallet.",
+  "Network-NoWalletAddress": "Allow access to one account in your wallet.",
   "Vault-Wallet": "Wallet",
-  "Vault-ConnectWallet": "Connect Wallet",
   "Vault-Balance": "Balance",
   "Vault-APR": "APR",
   "Vault-APY": "APY",
