--- a/src/locales/pt-PT/translation.json
+++ b/src/locales/pt-PT/translation.json
@@ -1,32 +1,56 @@
 {
-  "Disclaimer": "Usar smart contracts, tokens, e crypto é sempre um risco. Faça sua própria pesquisa(DYOR) antes de investir.",
+  "App-Meta-Description": "O Optimizador de Rentabilidades Multichain",
+  "Disclaimer": "Utilizar Contratos Inteligentes, Tokens, e Cripto em geral representa sempre um risco. Investigue (DYOR) antes de investir.",
+  "Network-UnknownError": "Ocorreu um erro desconhecido.",
+  "Network-ConnectionRequired": "É necessário ligar a carteira à rede {{network}}.",
+  "Network-Supports": "Esta app suporta a rede {{network}}.",
+  "Network-ConnectedTo": "Neste momento está ligado à rede {{network}}.",
+  "Network-ConnectedUnsupported": "Neste momento está ligado a um rede que não é suportada.",
+  "Network-ConnectWallet": "Ligar Carteira",
+  "Network-DisconnectWallet": "Desligar carteira",
+  "Network-SwitchToNetwork": "Mudar para a rede {{network}}",
+  "Network-GoToApp": "Ir para a app da rede {{network}}",
+  "Network-SwitchNote": "Necessita de alterar a rede que está escolhida na sua carteira.",
+  "Network-NoWalletAddress": "Permitir o acesso a uma conta da sua carteira.",
   "Vault-Wallet": "Carteira",
-  "Network-ConnectWallet": "Conectar Carteira",
   "Vault-Balance": "Saldo",
+  "Vault-APR": "APR",
   "Vault-APY": "APY",
-  "Vault-APYDaily": "Lucro diário",
+  "Vault-APYDaily": "Diário",
   "Vault-TVL": "TVL",
+  "Vault-AutocompoundingNote": "Os cofres capitalizam com periodicidade optimizada",
   "Vault-Approving": "Aprovando...",
   "Vault-ApproveButton": "Aprovar",
   "Vault-ApprovalSuccess": "Aprovado com sucesso",
   "Vault-ApprovalError": "Erro ao aprovar: {{error}}",
-  "Vault-DepositButton": "Depósito",
+  "Vault-BifiBuyback": "BIFI Buyback {{amount}}/dia",
+  "Vault-DepositButton": "Depositar",
   "Vault-DepositButtonAll": "Depositar tudo",
-  "Vault-DepositTokensNote": "Você irá receber {{mooToken}} token como recibo dos seus ativos {{assetToken}}. Este recibo é necessário para resgatar seu {{assetToken}}, não negocie ou transfira seus {{mooToken}} para estranhos!",
-  "Vault-DepositFee": "Há uma taxa de déposito {{depositFee}}, não há taxa de saque",
+  "Vault-DepositTokensNote": "Receberá {{mooToken}} como recibo do seu activo {{assetToken}}. Este recibo é necessário para resgatar o seu {{assetToken}}, pelo que nunca deverá negociar ou transferir os seus {{mooToken}} para estranhos!",
+  "Vault-DepositAndWithdrawFee": "Taxa de depósito: {{depositFee}}, Taxa de resgate: {{withdrawalFee}}",
   "Vault-Deposited": "Depositado",
   "Vault-DepositSuccess": "Depositado com sucesso",
   "Vault-DepositError": "Erro ao depositar: {{error}}",
-  "Vault-Withdrawing": "Retirando...",
-  "Vault-WithdrawButton": "Retirar",
-  "Vault-WithdrawButtonAll": "Retirar tudo",
-  "Vault-WithdrawFeeGlobal": "Há uma taxa de retirada de 0.05%-0.1% em todos os cofres",
-  "Vault-WithdrawSuccess": "Sacado com sucesso",
-  "Vault-WithdrawError": "Erro ao sacar: {{error}}",
+  "Vault-DepositScenario": "O depósito resultará em:",
+  "Vault-DepositScenarioSwap": "Por forma a equilibrar o par de liquidez, permute {{swapIn}} por {{swapOut}} (±{{slippageTolerance}} de derrapagem e de taxa de depósito, caso exista)",
+  "Vault-DepositScenarioAddLiquidity": "Adicionar liquidez para receber {{poolToken}}",
+  "Vault-DepositScenarioDepositToVault": "O depósito de {{poolToken}} foi recebido no cofre Beefy",
+  "Vault-DepositScenarioReturnDust": "Devolver quantidades não utilizadas de {{tokenA}} e {{tokenB}} para a sua carteira",
+  "Vault-Withdrawing": "A resgatar...",
+  "Vault-WithdrawButton": "Resgatar",
+  "Vault-WithdrawButtonAll": "Resgatar tudo",
+  "Vault-WithdrawFeeGlobal": "Existe uma taxa de resgate de 0.1% em todos os cofres (salvo nota em contrário do cofre)",
+  "Vault-WithdrawSuccess": "Resgatado com sucesso",
+  "Vault-WithdrawError": "Erro ao resgatar: {{error}}",
+  "Vault-WithdrawScenario": "O resgate resultará em:",
+  "Vault-WithdrawScenarioRedeem": "Resgatar {{mooToken}} por {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Remover liquidez de {{poolToken}} para receber {{tokenA}} e {{tokenB}}",
+  "Vault-WithdrawScenarioSwap": "Troca estimada de {{swapIn}} por {{swapOut}} (±{{slippageTolerance}} de derrapagem e taxa de resgate, caso exista)",
+  "Vault-WithdrawScenarioTotal": "Transferência estimada de {{totalOut}} para a sua carteira",
   "Vault-Harvesting": "Colhendo...",
   "Vault-HarvestButton": "Colheita",
   "Vault-HarvestConfirm": "Confirmar Colheita?",
-  "Vault-HarvestDescription": "Ao realizar a colheita, você está ajudando todos a coletar os lucros gerados neste cofre. Você irá receber {{callFee}}% dos ganhos do cofre desde a última colheita.",
+  "Vault-HarvestDescription": "Todos os cofres capitalizam automaticamente os juros. Favor notar que o modo manual deverá ser apenas utilizado por utilizadores mais avançados. Tendo em conta esta explicação, pretende mesmo assim continuar com este procedimento manual?",
   "Vault-HarvestSuccess": "Colhido com sucesso",
   "Vault-HarvestError": "Erro ao colher: {{error}}",
   "Vault-LastHarvest": "Última Colheita",
@@ -34,68 +58,88 @@
   "Vault-SecondTitle": "Deposite e Ganhe Dinheiro",
   "Vault-DepositsPausedTitle": "Depósitos suspensos",
   "Vault-DepositsPausedMsg": "Depósitos estão suspensos para este cofre.",
-  "Vault-DepositsRetiredTitle": "APOSENTADO",
-  "Vault-DepositsRetiredMsg": "Cofre aposentado, resgate seus fundos em breve",
+  "Vault-DepositsRetiredTitle": "OBSOLETO",
+  "Vault-DepositsRetiredMsg": "Cofre obsoleto, resgate os seus fundos com a maior brevidade",
   "Vault-Staked": "Investido",
   "Vault-Description": "Usa: {{vault}}",
   "Vault-Network": "Rede",
-  "Vault-Loading": "Carregando Cofre",
-  "Vault-NotFound": "Cofre {{vaultId}} não encontrado",
+  "Vault-Experimental": "Experimental",
+  "Vault-Loading": "A carregar o cofre...",
+  "Vault-NotFound": "O cofre {{vaultId}} não foi encontrado",
+  "Vault-Breakdown-VaultApr": "APR do Cofre",
+  "Vault-Breakdown-TradingApr": "APR de Trading",
+  "Vault-Breakdown-BoostApr": "APR devido ao Boost",
+  "Vault-Breakdown-VaultDaily": "Diário do Cofre",
+  "Vault-Breakdown-TradingDaily": "Diário de Trading",
+  "Vault-Breakdown-BoostDaily": "Diário de Boost",
+  "Vault-Banner-CakeV2-StakeLabel": "Fazer Stake do seu {{symbol}}",
+  "Vault-Banner-CakeV2-StakeValue": "Cofre de apenas {{symbol}}",
+  "Vault-Banner-CakeV2-SaferLabel": "Mais seguro",
+  "Vault-Banner-CakeV2-SaferValue": "{{count}} intermediários",
+  "Vault-Banner-CakeV2-SmarterLabel": "Mais inteligente",
+  "Vault-Banner-CakeV2-SmarterValue": "{{count}}+ de reinvestimento anual",
+  "Vault-Banner-CakeV2-FairerLabel": "Mais justo",
+  "Vault-Banner-CakeV2-FairerValue": "{{percent}}% menos taxas",
   "Vaults-Back": "Voltar para cofres",
-  "Hide-Zero-Balances": "Ocultar Ativos Com Saldo Zero",
+  "Hide-Zero-Balances": "Ocultar Sem Saldo",
   "Hide-Zero-Vault-Balances": "Cofres com Depósitos",
-  "Retired-Vaults": "Cofres Aposentados",
+  "Retired-Vaults": "Cofres Obsoletos",
   "Filters-Platform": "Plataforma",
   "Filters-Vault-Type": "Tipo de cofre",
-  "Filters-Asset": "Ativos",
+  "Filters-Asset": "Activo",
   "Filters-Sort": "Ordenar por",
   "Filters-All": "Todos",
   "Filters-Default": "Padrão",
   "Filters-Reset": "Limpar Filtros",
+  "Filters-Type-SingleAssets": "Activos Únicos",
+  "Filters-Type-StableLPs": "LP Estável",
+  "Filters-Type-Stables": "Estáveis",
   "Confirm": "Confirmar",
   "Cancel": "Cancelar",
   "No-Results": "Sem Resultados",
   "docs": "docs",
   "news": "notícias",
-  "source": "fontes",
+  "source": "código-fonte",
   "gov": "gov",
-  "vote": "vote",
-  "stats": "painel",
+  "vote": "votar",
+  "stats": "stats",
   "app": "app",
-  "socials": "sociais",
+  "socials": "social",
   "buy": "comprar",
   "products": "produtos",
-  "Powered-By": "POWERED BY",
-  "IFO-Guide": "Guia do IFO",
+  "Powered-By": "DISTRIBUÍDO POR",
+  "IFO-Guide": "Guia de IFO",
   "Available-To-Stake": "Disponível para Investir",
   "Stake": "Investir",
-  "Available-To-Unstake": "Disponível para Resgate",
+  "Available-To-Unstake": "Disponível para Resgatar",
   "Unstake": "Resgatar",
-  "Max": "Max",
-  "Coming-Soon": "Em Breve",
+  "Max": "Máx",
+  "Coming-Soon": "Disponível Brevemente",
   "Finished": "Concluído",
   "End": "Fim",
+  "Stakes-Meta-Title": "Boosts - {{networkName}}",
+  "Stake-Meta-Title": "Ganhe {{earnedToken}} - Boosted por {{boostedBy}} - {{networkName}}",
   "Stake-Button-Stake": "Investir",
-  "Stake-Button-Claim": "Reivindicar",
-  "Stake-Button-Approval": "Approvar",
+  "Stake-Button-Claim": "Reclamar",
+  "Stake-Button-Approval": "Aprovar",
   "Stake-Button-Stake-Tokens": "Investir Tokens",
   "Stake-Button-Unstake-Tokens": "Resgatar Tokens",
-  "Stake-Button-Claim-Rewards": "Reivindicar Recompensas",
-  "Stake-Button-Exit": "Reivindicar e Resgatar",
-  "Stake-Balancer-Current-Staked": "Atualmente Investido",
+  "Stake-Button-Claim-Rewards": "Reclamar Recompensas",
+  "Stake-Button-Exit": "Reclamar e Resgatar",
+  "Stake-Balancer-Current-Staked": "Investido Actualmente",
   "Stake-Balancer-Rewards-Available": "Prêmios Disponíveis",
   "Stake-Balancer-Half-Time": "Meio-Tempo",
-  "Stake-BoostedBy": "Turbinado por {{name}}",
+  "Stake-BoostedBy": "Boosted por {{name}}",
   "Stake-Button-Back": "Voltar",
-  "Stake-Pool-Retired": "O pool chegou ao seu fim, saque seus fundos.",
-  "Stake-Total-Value-Locked": "Valor Total Bloqueado",
+  "Stake-Pool-Retired": "A pool chegou ao fim, resgate os seus fundos.",
+  "Stake-Total-Value-Locked": "Valor Total de {{mooToken}} Investido",
   "Stake-Your-Pool": "Seu Pool",
   "Stake-Current-Daily": "Taxa de Juros Diária",
   "Add-Liquidity": "Adicionar Liquidez",
   "Remove-Liquidity": "Remover Liquidez",
   "Buy-Token": "Comprar Token",
   "Wrap-BNB": "Wrap BNB",
-  "Boost": "Turbinar",
+  "Boost": "Boost",
   "Experimental": "Experimental",
-  "Select-Network": "Selecione a Rede"
+  "Select-Network": "Escolha a Rede"
 }
