tweak Italian localization

--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -18,7 +18,7 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Giornaliero",
   "Vault-TVL": "TVL",
-  "Vault-AutocompoundingNote": "Tutte le casseforti capitalizzano gli interessi a un tasso ottimale (interesse composto automatico)",
+  "Vault-AutocompoundingNote": "Capitalizzazione automatica e ottimizzata degli interessi",
   "Vault-Approving": "Approvazione in corso...",
   "Vault-ApproveButton": "Approva",
   "Vault-ApprovalSuccess": "Approvazione riuscita",
@@ -87,7 +87,7 @@
   "Filters-Platform": "Piattaforma",
   "Filters-Vault-Type": "Tipo cassaforte",
   "Filters-Asset": "Token",
-  "Filters-Sort": "Ordine per",
+  "Filters-Sort": "Ordina per",
   "Filters-All": "Tutti",
   "Filters-Default": "Predefinito",
   "Filters-Reset": "Azzera filtri",
@@ -118,7 +118,7 @@
   "Finished": "Terminato",
   "End": "Fine",
   "Stakes-Meta-Title": "Boost - {{networkName}}",
-  "Stake-Meta-Title": "Ottieni {{earnedToken}} - Promosso da {{boostedBy}} - {{networkName}}",
+  "Stake-Meta-Title": "Guadagna {{earnedToken}} - Promosso da {{boostedBy}} - {{networkName}}",
   "Stake-Button-Stake": "Metti in staking",
   "Stake-Button-Claim": "Riscuoti",
   "Stake-Button-Approval": "Approva",
